--- a/jeet.html
+++ b/jeet.html
@@ -34,12 +34,13 @@
   	Type in a number:
   	<input id="input" type="text" value="" />
 	<input type="button" onclick="generateFields()" value="add row(s)">
-	<p id="result">result</p>
+	<p id="result">result is here</p>
 	</form>
 <br/>
 	<table id="table" border="1">
 
 	</table>
+
 	
 	<script type="text/javascript" src="jeet.js">
 
